initial commit: internal developer platform cdk infrastructure
aws cdk infrastructure for deploying a complete internal developer platform on eks:

core platform:
- backstage developer portal with rds postgres
- argocd for gitops with github sso via dex
- argo workflows for ci/cd pipelines
- argo events for event-driven automation
- argo rollouts for progressive delivery

infrastructure:
- eks cluster with karpenter autoscaling
- external secrets operator with aws secrets manager
- cert-manager for tls certificates
- kyverno for policy enforcement
- aws load balancer controller with alb ingress
- external-dns for route53 integration
- grafana for observability dashboards

architecture:
- nested cdk stacks for modular deployment
- mustache templates for helm values
- irsa for secure aws api access
- sso integration across argo tools via argocd dex

--- a/src/main/resources/production/v1/eks/addons.mustache
+++ b/src/main/resources/production/v1/eks/addons.mustache
@@ -123,6 +123,7 @@ managed:
           "{{deployment:domain}}:organization": "{{deployment:organization}}"
           "{{deployment:domain}}:name": "{{deployment:team:name}}"
           "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+
 certManager:
   chart:
     name: cert-manager
@@ -131,6 +132,7 @@ certManager:
     version: v1.19.1
     namespace: cert-manager
     values: helm/cert-manager.mustache
+
 awsSecretsStore:
   chart:
     name: secrets-store-csi-driver-provider-aws
@@ -139,21 +141,22 @@ awsSecretsStore:
     version: 2.1.1
     namespace: aws-secrets-store
     values: helm/aws-secrets-store.mustache
-# Core reliability addons
+
 metricsServer:
   chart:
     name: metrics-server
     repository: https://kubernetes-sigs.github.io/metrics-server/
     release: metrics-server
-    version: 3.12.2
+    version: 3.13.0
     namespace: kube-system
     values: helm/metrics-server.mustache
+
 externalDns:
   chart:
     name: external-dns
     repository: https://kubernetes-sigs.github.io/external-dns/
     release: external-dns
-    version: 1.15.0
+    version: 1.19.0
     namespace: external-dns
     values: helm/external-dns.mustache
   txtOwnerId: {{deployment:id}}
@@ -187,12 +190,13 @@ externalDns:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+
 externalSecrets:
   chart:
     name: external-secrets
     repository: https://charts.external-secrets.io
     release: external-secrets
-    version: 0.12.1
+    version: 1.1.1
     namespace: external-secrets
     values: helm/external-secrets.mustache
   serviceAccount:
@@ -226,23 +230,26 @@ externalSecrets:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+  clusterSecretStore: eks/cluster-secret-store.mustache
+
 reloader:
   chart:
     name: reloader
     repository: https://stakater.github.io/stakater-charts
     release: reloader
-    version: 1.2.0
+    version: 2.2.5
     namespace: reloader
     values: helm/reloader.mustache
-# Platform addons
+
 kyverno:
   chart:
     name: kyverno
     repository: https://kyverno.github.io/kyverno
     release: kyverno
-    version: 3.3.4
+    version: 3.6.1
     namespace: kyverno
     values: helm/kyverno.mustache
+
 karpenter:
   chart:
     name: karpenter
@@ -290,12 +297,75 @@ karpenter:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+  nodePools:
+    - name: default
+      ec2NodeClass:
+        name: default
+        role: {{deployment:id}}-core-node
+        amiFamily: bottlerocket
+        subnetSelectorTags:
+          "karpenter.sh/discovery": {{deployment:id}}-vpc
+          "{{deployment:domain}}:type": private_with_egress
+        securityGroupSelectorTags:
+          "aws:eks:cluster-name": {{deployment:id}}-eks
+        blockDeviceMappings:
+          - deviceName: /dev/xvda
+            ebs:
+              volumeType: gp3
+              volumeSize: 50
+              encrypted: true
+              deleteOnTermination: true
+          - deviceName: /dev/xvdb
+            ebs:
+              volumeType: gp3
+              volumeSize: 100
+              encrypted: true
+              deleteOnTermination: true
+        tags:
+          "{{deployment:domain}}:resource-type": ec2
+          "{{deployment:domain}}:category": karpenter
+          "{{deployment:domain}}:type": node
+          "{{deployment:domain}}:organization": "{{deployment:organization}}"
+          "{{deployment:domain}}:name": "{{deployment:team:name}}"
+          "karpenter.sh/discovery": {{deployment:id}}-eks
+      requirements:
+        - key: karpenter.sh/capacity-type
+          operator: In
+          values:
+            - on-demand
+            - spot
+        - key: kubernetes.io/arch
+          operator: In
+          values:
+            - amd64
+        - key: karpenter.k8s.aws/instance-category
+          operator: In
+          values:
+            - m
+            - c
+            - r
+        - key: karpenter.k8s.aws/instance-size
+          operator: In
+          values:
+            - medium
+            - large
+            - xlarge
+            - 2xlarge
+      limits:
+        cpu: 100
+        memory: 200Gi
+      disruption:
+        consolidationPolicy: WhenEmptyOrUnderutilized
+        consolidateAfter: 1m
+        budgets:
+          - nodes: 10%
+
 awsLoadBalancer:
   chart:
     name: aws-load-balancer-controller
     repository: https://aws.github.io/eks-charts
     release: aws-load-balancer-controller
-    version: 1.15.0
+    version: 1.16.0
     namespace: aws-load-balancer
     values: helm/aws-load-balancer.mustache
   serviceAccount:
@@ -326,125 +396,42 @@ awsLoadBalancer:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
-alloyOperator:
+
+backstage:
+  setup: setup/backstage.mustache
+  dockerImage:
+    name: {{deployment:id}}-backstage
+    directory: ../backstage-ext
+    dockerfile: Dockerfile
+    platform: linux/amd64
+    buildArgs: { }
   chart:
-    name: alloy-operator
-    repository: https://grafana.github.io/helm-charts
-    release: alloy-operator
-    version: 0.3.12
-    namespace: monitoring
-    values: helm/alloy-operator.mustache
-  secret: {{deployment:eks:grafana:secret}}
+    name: backstage
+    namespace: backstage
+    release: backstage-{{deployment:team:alias}}
+    repository: ""
+    values: helm/backstage.mustache
+    version: "1.0.0"
+
 argoWorkflows:
+  setup: setup/argo-workflows.mustache
   chart:
     name: argo-workflows
     repository: https://argoproj.github.io/argo-helm
     release: argo-workflows
-    version: 0.45.1
+    version: 0.46.1
     namespace: argo
     values: helm/argo-workflows.mustache
-  artifactBucket:
-    name: {{deployment:id}}-argo-artifacts
-    removalPolicy: retain
-  serverServiceAccount:
-    metadata:
-      name: argo-server
-      namespace: argo
-      labels:
-        "{{deployment:domain}}/resource-type": service-account
-        "{{deployment:domain}}/category": ci-cd
-        "{{deployment:domain}}/type": argo-workflows
-        "{{deployment:domain}}/component": argo-server
-        "{{deployment:domain}}/organization": "{{deployment:organization}}"
-        "{{deployment:domain}}/name": "{{deployment:team:name}}"
-        "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
-      annotations: { }
-    role:
-      name: {{deployment:id}}-argo-server-sa
-      managedPolicyNames: [ ]
-      customPolicies:
-        - name: {{deployment:id}}-argo-server-s3
-          policy: policy/argo-workflows-server.mustache
-          mappings:
-            bucket: {{deployment:id}}-argo-artifacts
-      tags:
-        "{{deployment:domain}}:resource-type": role
-        "{{deployment:domain}}:category": ci-cd
-        "{{deployment:domain}}:type": argo-workflows
-        "{{deployment:domain}}:component": {{deployment:id}}-argo-server
-        "{{deployment:domain}}:organization": "{{deployment:organization}}"
-        "{{deployment:domain}}:name": "{{deployment:team:name}}"
-        "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
-  controllerServiceAccount:
-    metadata:
-      name: argo-workflow-controller
-      namespace: argo
-      labels:
-        "{{deployment:domain}}/resource-type": service-account
-        "{{deployment:domain}}/category": ci-cd
-        "{{deployment:domain}}/type": argo-workflows
-        "{{deployment:domain}}/component": argo-controller
-        "{{deployment:domain}}/organization": "{{deployment:organization}}"
-        "{{deployment:domain}}/name": "{{deployment:team:name}}"
-        "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
-      annotations: { }
-    role:
-      name: {{deployment:id}}-argo-controller-sa
-      managedPolicyNames: [ ]
-      customPolicies:
-        - name: {{deployment:id}}-argo-controller-s3
-          policy: policy/argo-workflows-controller.mustache
-          mappings:
-            bucket: {{deployment:id}}-argo-artifacts
-      tags:
-        "{{deployment:domain}}:resource-type": role
-        "{{deployment:domain}}:category": ci-cd
-        "{{deployment:domain}}:type": argo-workflows
-        "{{deployment:domain}}:component": {{deployment:id}}-argo-controller
-        "{{deployment:domain}}:organization": "{{deployment:organization}}"
-        "{{deployment:domain}}:name": "{{deployment:team:name}}"
-        "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
-  executorServiceAccount:
-    metadata:
-      name: argo-workflow
-      namespace: argo
-      labels:
-        "{{deployment:domain}}/resource-type": service-account
-        "{{deployment:domain}}/category": ci-cd
-        "{{deployment:domain}}/type": argo-workflows
-        "{{deployment:domain}}/component": argo-executor
-        "{{deployment:domain}}/organization": "{{deployment:organization}}"
-        "{{deployment:domain}}/name": "{{deployment:team:name}}"
-        "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
-      annotations: { }
-    role:
-      name: {{deployment:id}}-argo-executor-sa
-      managedPolicyNames: [ ]
-      customPolicies:
-        - name: {{deployment:id}}-argo-executor
-          policy: policy/argo-workflows-executor.mustache
-          mappings:
-            region: {{deployment:region}}
-            account: {{deployment:account}}
-            bucket: {{deployment:id}}-argo-artifacts
-            prefix: {{deployment:id}}
-      tags:
-        "{{deployment:domain}}:resource-type": role
-        "{{deployment:domain}}:category": ci-cd
-        "{{deployment:domain}}:type": argo-workflows
-        "{{deployment:domain}}:component": {{deployment:id}}-argo-executor
-        "{{deployment:domain}}:organization": "{{deployment:organization}}"
-        "{{deployment:domain}}:name": "{{deployment:team:name}}"
-        "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+
 argocd:
   chart:
     name: argo-cd
     repository: https://argoproj.github.io/argo-helm
     release: argocd
-    version: 7.7.10
+    version: 9.1.6
     namespace: argocd
     values: helm/argocd.mustache
-  repoServerServiceAccount:
+  serviceAccount:
     metadata:
       name: argocd-repo-server
       namespace: argocd
@@ -475,12 +462,112 @@ argocd:
         "{{deployment:domain}}:organization": "{{deployment:organization}}"
         "{{deployment:domain}}:name": "{{deployment:team:name}}"
         "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+
+argoEvents:
+  chart:
+    name: argo-events
+    repository: https://argoproj.github.io/argo-helm
+    release: argo-events
+    version: 2.4.19
+    namespace: argo-events
+    values: helm/argo-events.mustache
+  controllerServiceAccount:
+    metadata:
+      name: argo-events-controller
+      namespace: argo-events
+      labels:
+        "{{deployment:domain}}/resource-type": service-account
+        "{{deployment:domain}}/category": ci-cd
+        "{{deployment:domain}}/type": argo-events
+        "{{deployment:domain}}/component": argo-events-controller
+        "{{deployment:domain}}/organization": "{{deployment:organization}}"
+        "{{deployment:domain}}/name": "{{deployment:team:name}}"
+        "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
+      annotations: { }
+    role:
+      name: {{deployment:id}}-argo-events-controller-sa
+      managedPolicyNames: [ ]
+      customPolicies:
+        - name: {{deployment:id}}-argo-events-controller
+          policy: policy/argo-events-controller.mustache
+          mappings:
+            region: {{deployment:region}}
+            account: {{deployment:account}}
+      tags:
+        "{{deployment:domain}}:resource-type": role
+        "{{deployment:domain}}:category": ci-cd
+        "{{deployment:domain}}:type": argo-events
+        "{{deployment:domain}}:component": {{deployment:id}}-argo-events-controller
+        "{{deployment:domain}}:organization": "{{deployment:organization}}"
+        "{{deployment:domain}}:name": "{{deployment:team:name}}"
+        "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+
+argoRollouts:
+  chart:
+    name: argo-rollouts
+    repository: https://argoproj.github.io/argo-helm
+    release: argo-rollouts
+    version: 2.40.5
+    namespace: argo-rollouts
+    values: helm/argo-rollouts.mustache
+  controllerServiceAccount:
+    metadata:
+      name: argo-rollouts-controller
+      namespace: argo-rollouts
+      labels:
+        "{{deployment:domain}}/resource-type": service-account
+        "{{deployment:domain}}/category": ci-cd
+        "{{deployment:domain}}/type": argo-rollouts
+        "{{deployment:domain}}/component": argo-rollouts-controller
+        "{{deployment:domain}}/organization": "{{deployment:organization}}"
+        "{{deployment:domain}}/name": "{{deployment:team:name}}"
+        "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
+      annotations: {}
+    role:
+      name: {{deployment:id}}-argo-rollouts-controller-sa
+      managedPolicyNames: []
+      customPolicies: []
+      tags:
+        "{{deployment:domain}}:resource-type": role
+        "{{deployment:domain}}:category": ci-cd
+        "{{deployment:domain}}:type": argo-rollouts
+        "{{deployment:domain}}:component": {{deployment:id}}-argo-rollouts-controller
+        "{{deployment:domain}}:organization": "{{deployment:organization}}"
+        "{{deployment:domain}}:name": "{{deployment:team:name}}"
+        "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+  dashboardServiceAccount:
+    metadata:
+      name: argo-rollouts-dashboard
+      namespace: argo-rollouts
+      labels:
+        "{{deployment:domain}}/resource-type": service-account
+        "{{deployment:domain}}/category": ci-cd
+        "{{deployment:domain}}/type": argo-rollouts
+        "{{deployment:domain}}/component": argo-rollouts-dashboard
+        "{{deployment:domain}}/organization": "{{deployment:organization}}"
+        "{{deployment:domain}}/name": "{{deployment:team:name}}"
+        "{{deployment:domain}}/alias": "{{deployment:team:alias}}"
+      annotations: {}
+    role:
+      name: {{deployment:id}}-argo-rollouts-dashboard-sa
+      managedPolicyNames: []
+      customPolicies: []
+      tags:
+        "{{deployment:domain}}:resource-type": role
+        "{{deployment:domain}}:category": ci-cd
+        "{{deployment:domain}}:type": argo-rollouts
+        "{{deployment:domain}}:component": {{deployment:id}}-argo-rollouts-dashboard
+        "{{deployment:domain}}:organization": "{{deployment:organization}}"
+        "{{deployment:domain}}:name": "{{deployment:team:name}}"
+        "{{deployment:domain}}:alias": "{{deployment:team:alias}}"
+  ingress: setup/argo-rollouts-ingress.mustache
+
 grafana:
   chart:
     name: k8s-monitoring
     repository: https://grafana.github.io/helm-charts
     release: k8s-monitoring
-    version: 3.5.7
+    version: 3.6.2
     namespace: monitoring
     values: helm/grafana.mustache
   secret: {{deployment:eks:grafana:secret}}
