--- a/src/main/resources/production/v1/helm/kyverno.mustache
+++ b/src/main/resources/production/v1/helm/kyverno.mustache
@@ -38,13 +38,13 @@ reportsController:
 
 config:
   webhooks:
-    - namespaceSelector:
-        matchExpressions:
-          - key: kubernetes.io/metadata.name
-            operator: NotIn
-            values:
-              - kube-system
-              - kyverno
+    namespaceSelector:
+      matchExpressions:
+        - key: kubernetes.io/metadata.name
+          operator: NotIn
+          values:
+            - kube-system
+  excludeKyvernoNamespace: true
 
 features:
   admissionReports:
