--- a/src/main/resources/production/v1/policy/external-secrets-access.mustache
+++ b/src/main/resources/production/v1/policy/external-secrets-access.mustache
@@ -7,7 +7,7 @@
       "secretsmanager:ListSecrets"
     ],
     "Resource": [
-      "arn:aws:secretsmanager:{{region}}:{{account}}:secret:{{prefix}}/*"
+      "arn:aws:secretsmanager:{{region}}:{{account}}:secret:{{prefix}}-*"
     ]
   },
   {
@@ -15,7 +15,7 @@
     "Action": [
       "secretsmanager:ListSecrets"
     ],
-    "Resource": "*"
+    "Resource": ["*"]
   },
   {
     "Effect": "Allow",
@@ -23,7 +23,7 @@
       "kms:Decrypt",
       "kms:DescribeKey"
     ],
-    "Resource": "*",
+    "Resource": ["*"],
     "Condition": {
       "StringEquals": {
         "kms:ViaService": "secretsmanager.{{region}}.amazonaws.com"
