--- a/src/main/resources/production/v1/helm/aws-secrets-store.mustache
+++ b/src/main/resources/production/v1/helm/aws-secrets-store.mustache
@@ -1,3 +1,25 @@
+nodeSelector:
+  kubernetes.io/os: linux
+
+resources:
+  requests:
+    cpu: 25m
+    memory: 32Mi
+  limits:
+    cpu: 100m
+    memory: 128Mi
+
 secrets-store-csi-driver:
   syncSecret:
     enabled: true
+  enableSecretRotation: true
+  rotationPollInterval: 2m
+  nodeSelector:
+    kubernetes.io/os: linux
+  resources:
+    requests:
+      cpu: 25m
+      memory: 32Mi
+    limits:
+      cpu: 100m
+      memory: 128Mi
