--- a/src/main/resources/production/v1/helm/metrics-server.mustache
+++ b/src/main/resources/production/v1/helm/metrics-server.mustache
@@ -1,5 +1,8 @@
 replicas: 2
 
+nodeSelector:
+  "eks.amazonaws.com/nodegroup": {{deployment:id}}-core-node
+
 args:
   - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
   - --kubelet-use-node-status-port
@@ -19,3 +22,6 @@ podDisruptionBudget:
 
 metrics:
   enabled: true
+
+serviceMonitor:
+  enabled: false
