--- a/src/main/resources/production/v1/helm/reloader.mustache
+++ b/src/main/resources/production/v1/helm/reloader.mustache
@@ -1,6 +1,13 @@
 reloader:
   watchGlobally: true
+  reloadOnCreate: false
+  syncAfterRestart: false
+  reloadStrategy: default  # default | annotations | env-vars
+  ignoreSecrets: false
+  ignoreConfigMaps: false
   deployment:
+    nodeSelector:
+      "eks.amazonaws.com/nodegroup": {{deployment:id}}-core-node
     resources:
       requests:
         cpu: 10m
