--- a/src/main/resources/production/v1/policy/argocd-repo-server.mustache
+++ b/src/main/resources/production/v1/policy/argocd-repo-server.mustache
@@ -4,7 +4,7 @@
     "Action": [
       "ecr:GetAuthorizationToken"
     ],
-    "Resource": "*"
+    "Resource": ["*"]
   },
   {
     "Effect": "Allow",
