--- a/src/main/resources/production/v1/helm/argo-workflows.mustache
+++ b/src/main/resources/production/v1/helm/argo-workflows.mustache
@@ -30,7 +30,7 @@ server:
 
   extraArgs:
     - --secure=false
-    - --access-control-allow-origin=https://{{domain}}
+    - --access-control-allow-origin=https://workflows.{{domain}}
 
   ingress:
     enabled: true
